--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "vue": "^2.5.11",
     "vue-bootstrap-pagination": "^2.10.3",
+    "vue-paginate": "^3.6.0",
+    "vue-persist": "^0.4.0",
     "vue-router": "^3.0.1",
+    "vuejs-paginate": "^2.0.1",
     "vuex": "^3.0.1",
     "vuex-persist": "^1.4.3",
     "webpack-bundle-tracker": "^0.3.0",
